--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             </section>-->
         </header>
     </div>
-
+    
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+          <img src="images/Screenshot_880x495_10.png"></img>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description.</h3>
 
