Minor changes on index
Minor changes on index

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description.</h3>
 
-          <p>The game that I created in the final assignment of the course <a href="https://www.coursera.org/learn/gamedev-platforms/home/welcome">Game Development for Modern Platforms by Michigan State University</a> in Coursera.
-Super Space Runner is a Action Platform Endless Runner game in 2D.
+          <p>Game created in the final assignment of the course <a href="https://www.coursera.org/learn/gamedev-platforms/home/welcome">Game Development for Modern Platforms by Michigan State University</a> in Coursera.</p>
+        <p>Super Space Runner is a Action Platform Endless Runner game in 2D.</p>
 
-You are in control of a <code>spaceship</code>, which has to travel through space, collecting coins, power bananas. and some special supplements, in the way you expect a meteor shower and some alien enemies will not let you go very far! </p>
+<p>You are in control of a <code>spaceship</code>, which has to travel through space, collecting coins, power bananas. and some special supplements, in the way you expect a meteor shower and some alien enemies will not let you go very far! </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Instructions</h3>
 
-<p>Collect coins, bananas, powerups, skills and avoid meteors and enemies, and REACH HIGH!
+        <p>Collect coins, bananas, powerups, skills and avoid meteors and enemies, and REACH HIGH!</p>
     <code>Controls:</code>
-Keyboard = WASD or arrow keys to move between grids
-XBox360 Controller and PSX Controller Compatible.</p>
+        <p>Keyboard = WASD or arrow keys to move between grids</p>
+<p>XBox360 Controller and PSX Controller Compatible.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Play</h3>
@@ -62,7 +62,7 @@ XBox360 Controller and PSX Controller Compatible.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">SuperSpaceRunner maintained by <a href="https://github.com/ntkodaigo">ntkodaigo</a></p>
+        <p class="copyright">SuperSpaceRunner maintained by <a href="https://github.com/ntkodaigo">ntkodaigo</a> (Diego Fernández)</p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
